--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_wlist">WListActivity</string>
     <string name="kakao_app_key">8f227ce17d6a3f4f4cee01b62114ac95</string>
-
+    <string name="default_notification_channel_id">yamigu_notification_channel_id</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
