--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="default_notification_channel_id">yamigu_notification_channel_id</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="term" tools:ignore="StringEscaping">
+    <string name="term1">
 제1조 목적\n
 이 약관은 야미구㈜(이하 \"회사\")가 제공하는 온라인 다수대다수만남(이하 "미팅") 주선 서비스 이용과 관련하여 회사와 사용자의 사용 시 권리와 의무, 책임사항 등 기타 필요한 사항을 규정함을 목적으로 합니다.\n
 \n
@@ -36,19 +36,20 @@
 \n
 제5조 서비스 이용 신청\n
 1. 서비스를 이용하고자 하는 자는 \"약관에 동의\" 후 신청자의 간단한 기본정보 입력단계를 거쳐 회원가입을 통해 서비스 이용을 신청합니다.\n
-2. 사용자가 입력한 정보는 사실로 간주됩니다. 회사는 사용자가 입력한 정보의 내용이 사실과 다를 경우(허위정보 등)와 타인의 정보를 도용한 것으로 의심되는 경우, 사실 여부를 확인하기 위해 사용자에게 입증자료 제출 및 해명을 요구할 수 있으며 상이한 사실이 명백하게 확인 되는 경우, '야미구'는 사용자로부터 사용자의 권한을 박탈하며 서비스 이용을 전면적으로 거부 할 수 있고, 이로 인해 발생하는 모든 불이익에 대해서는 회사가 책임지지 않습니다.\n
+2. 사용자가 입력한 정보는 사실로 간주됩니다. 회사는 사용자가 입력한 정보의 내용이 사실과 다를 경우(허위정보 등)와 타인의 정보를 도용한 것으로 의심되는 경우, 사실 여부를 확인하기 위해 사용자에게 입증자료 제출 및 해명을 요구할 수 있으며 상이한 사실이 명백하게 확인 되는 경우, \'야미구\'는 사용자로부터 사용자의 권한을 박탈하며 서비스 이용을 전면적으로 거부 할 수 있고, 이로 인해 발생하는 모든 불이익에 대해서는 회사가 책임지지 않습니다.\n
 3. 회사는 사용자의 상태와 이용기간, 이용횟수, 서비스 접근 방식 등에 따라 합리적인 기준을 통해 서비스 범위에 차등을 둘 수 있으며, 사용자는 상기 내용에 따라 서비스 이용에 제약을 받을 수 있습니다.\n
 4. 회사는 1항의 방법으로 서비스 이용을 신청한 자가 아래의 각 호에 해당하는 경우 서비스 이용 신청 승낙을 유보 또는 거부할 수 있습니다.\n
 	a. 타인의 정보 도용, 사진 도용, 프로필 허위기재 등 등록내용을 허위로 기재한 사실이 있는 경우, 해당 대학교의 재학생 또는 졸업생 또는 해당 직장에 재직중인 직장인이 아닌 경우\n
-	b. 사용자가 '야미구' 약관 및 서비스 이용에 관한 관계법령을 위반하여 '야미구' 서비스의 사용자격을 상실한 경우\n
+	b. 사용자가 \'야미구\' 약관 및 서비스 이용에 관한 관계법령을 위반하여 \'야미구\' 서비스의 사용자격을 상실한 경우\n
 	c. 한국 나이 기준 20세~43세가 아닌 경우\n
 	d. 법률혼 및 사실혼 상태이거나 이에 준하는 자 및 혼인 사실이 있는 자\n
 	e. 사회질서 및 미풍양속을 문란하게 한 자\n
-	f. 영리 추구를 목적으로 '야미구' 서비스에 가입 하고자 하는 자\n
+	f. 영리 추구를 목적으로 \'야미구\' 서비스에 가입 하고자 하는 자\n
 	g. 금치산자 및 한정치산자 기타 이에 준하는 자\n
 	h. 기타 회사의 여건상 이용승낙이 곤란하거나 가입결격 사유에 해당하는 자.\n
 5. 이용 신청 계약 성립 시점은 회사의 이용 신청 승낙이 신청자에게 도달한 시점을 기준으로 합니다.\n
-\n
+		</string>
+	<string name="term2">
 제6조 회원 인증 신청\n
 1. \'야미구\'에서는 일정한 인증 과정을 통과한 가입자들을 중심으로 서비스하게 됩니다. 따라서 인증을 완료하지 못한 가입신청자들은 서비스 이용에 제한이 있을 수 있습니다. 해당 상태의 신청자에게는 App내 푸쉬알림 수단으로 인증을 돕기 위한 행위가 이루어 집니다.\n
 2. 심사는 회사에서 정한 운영방침에 따라 이루어지며 관리자 즉, 사람이 직접 하기에 이용 신청 이후 일반적으로 3일 이내(평일 기준)의 심사기간이 필요할 수 있습니다. 단 위 기간은 회사의 상황에 따라 변경될 수 있습니다. 또한 회사에서 안정적인 서비스 제공을 위해 필요하다고 생각하는 경우에는 심사통과를 보류하거나 확인을 위한 제 증명을 요구할 수 있습니다.\n
@@ -102,7 +103,8 @@
 5. 회사는 정기적으로 사용자에게 당사의 서비스 내용 및 이용 안내에 대한 정기적인 서신을 보냅니다. (공지, SMS, App내 푸쉬알림 등)\n
 특히 서비스 내용과 관련하여 매칭요청 또는 매칭완료 시, 아이템 (티켓 등) 지급시 회사는 이를 사용자에게 App내 푸쉬알림 등을 통해 그 정보를 발송하며, 이용자는 이에 대한 수신동의를 한 것으로 봅니다. (단, 이용자(신청자)가 회사에게 고객센터 등의 경로를 통하여 이에 대한 수신 거부 의사를 표시한 경우 회사는 이를 발송하지 않습니다.)\n
 6. 회사는 이용계약의 체결, 계약사항의 변경 및 해지 등 이용자의 계약관련 절차 및 내용에 있어 이용고객에게 편의를 제공하도록 최선을 다합니다.\n
-\n
+		</string>
+	<string name="term3">
 제10조 사용자의 의무\n
 서비스 이용 신청 시 신청자는 반드시 동 약관 \'제4조\'에 기재되어있는 인증을 거친 해당 대학의 재학생 또는 졸업생이거나 해당 직장 등에 재직중인 직장인이어야 합니다. 일정기간이 경과한 뒤 변경되는 개인 정보는 지속적으로 본인이 정보를 갱신하여야 합니다. 이에 성실히 이행하지 않음으로 인해 발생하는 불이익은 이용자 (신청자) 본인의 책임입니다.\n
 1. 사용자가 직접 입력한 개인정보는 진실하여야 하며 만일 사용자가 허위 기타 부정한 정보를 입력하여 다른 이용자에게 피해가 발생할 경우 그에 대한 민·형사상의 책임을 포함한 일체의 책임은 이용자 본인에게 귀속됩니다.\n
@@ -140,7 +142,7 @@
 1. 회사는 천재지변이나 국가비상사태, 해결이 곤란한 기술적 결함 또는 서비스 운영의 심각한 변화 등 불가항력적인 경우가 발생 또는 발생이 예상될 때는 서비스의 전부 또는 일부를 예고 없이 제한하거나 중지할 수 있습니다.\n
 2. 서비스를 이용하게 됨으로써 서비스 영역에서 발생하는 회원 사이의 문제에 대해 회사는 책임을 지지 않습니다.\n
 3. 회원의 관리 소홀로 인하여 ID 및 비밀번호의 유출로 인해 회원에게 서비스 이용상의 손해가 발생하거나 제3자에 의한 부정이용 등으로 회원의 의무조항을 위반한 경우 ID및 해당 도메인의 이용이 제한될 수 있습니다.\n
-4. 회사가 본 약관 제10조의 위반 행위를 조사하는 과정에서 당해 회원 ID 및 도메인이 특정 위반행위에 직접적으로 관련되어 있는 경우 등 다른 회원의 권익 보호 및 서비스의 질서유지를 위해 불가피할 경우에는 해당 ID 및 도메인의 이용을 일시적으로 정지할 수 있습니다. 이에 대해 회원은 "야미구" 서비스 홈페이지 또는 관리자와 대화하기 등을 통해 이의신청을 할 수 있습니다.\n
+4. 회사가 본 약관 제10조의 위반 행위를 조사하는 과정에서 당해 회원 ID 및 도메인이 특정 위반행위에 직접적으로 관련되어 있는 경우 등 다른 회원의 권익 보호 및 서비스의 질서유지를 위해 불가피할 경우에는 해당 ID 및 도메인의 이용을 일시적으로 정지할 수 있습니다. 이에 대해 회원은 \"야미구\" 서비스 홈페이지 또는 관리자와 대화하기 등을 통해 이의신청을 할 수 있습니다.\n
 \n
 제14조 게시물의 권리와 책임\n
 1. 회원이 서비스 내에 작성한 텍스트, 이미지, 링크, 채팅 내용 등의 기타 정보(이하 "게시물")에 대한 책임 및 권리는 게시물을 등록한 회원에게 있습니다.\n
@@ -153,7 +155,8 @@
 제15조 게시물의 관리\n
 1. 회원의 게시물이 정보통신망법 및 저작권법등 관련법에 위반되는 내용을 포함하는 경우, 권리자는 관련법이 정한 절차에 따라 해당 게시물의 게시중단 및 삭제 등을 요청할 수 있으며, 회사는 관련법에 따라 조치를 취하여야 합니다.\n
 2. 회사는 전항에 따른 권리자의 요청이 없는 경우라도 권리침해가 인정될 만한 사유가 있거나 본 약관 및 기타 회사 정책, 관련법, 지적재산권, 공서양속에 위반되는 경우에는 관련법에 따라 해당 게시물에 대해 임시조치 등을 취할 수 있습니다.\n
-\n
+		</string>
+	<string name="term4">
 제16조 거래 행위에 대한 책임\n
 1. 회사는 효율적인 서비스를 위한 시스템 운영 및 관리 책임만을 부담하며, 재화 또는 용역의 거래와 관련하여 구매자 또는 판매자를 대리하지 아니하고, 사용자 사이에 성립된 거래 및 사용자가 제공하고 등록한 정보에 대해서는 해당 사용자가 그에 대한 모든 책임을 부담하여야 합니다.\n
 2. 회사는 회사가 제공하는 시스템을 통하여 이루어지는 구매자와 판매자 간의 거래와 관련하여 판매의사 또는 구매의사의 존부 및 진정성, 등록물품의 품질, 완전성, 안정성, 적법성 및 타인의 권리에 대한 비침해성, 구매자 또는 판매자가 입력하는 정보 및 그 정보를 통하여 링크된 URL에 게재된 자료의 진실성 또는 적법성 등 일체에 대하여 보증하지 아니하며, 이와 관련한 일체의 위험과 책임은 해당 사용자가 전적으로 부담합니다.\n
